' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package magazin.entity {
  class "type MagazinArt = 'DIGITAL' | 'DRUCKAUSGABE'" as MagazinArt
  hide MagazinArt circle

  class "type Verlag = 'A_VERLAG' | 'B_VERLAG'" as Verlag
  hide Verlag circle

  class Magazin <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly titel: string
    @Column() readonly rating: number
    @Column() readonly art: MagazinArt
    @Column() readonly verlag: Verlag
    @Column() readonly preis: number
    @Column() readonly rabatt: number
    @Column() readonly lieferbar: boolean
    @Column() readonly datum: Date
    @Column() readonly issn: string
    @Column() readonly homepage?: string
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Schlagwort <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly schlagwort: string
    @ManyToOne() readonly magazin: Magazin
  }

  Magazin ..> Entity
  Magazin *--> "*" Schlagwort : @OneToMany() schlagwoerter
  Magazin .up.> MagazinArt
  Magazin .up.> Verlag

  MagazinArt .[hidden].> Verlag
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
